webpack site opens

--- a/photo-blog.html
+++ b/photo-blog.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-title: Home
+layout: index
+title: Photos Blog
 ---
 <!-- This doesn't work for too many text posts in a row.. -->
 {% for post in paginator.posts %}
